fixed overlap issue

--- a/src/App.css
+++ b/src/App.css
@@ -113,10 +113,10 @@
   } 
 }
 
-/* @media screen and (max-width: 480px) {
+@media screen and (max-width: 480px) {
   .App {
     height: 100vh;
-    grid-template-columns: 0.2fr 1fr;
+    grid-template-columns: 0.1fr 1fr;
     grid-template-rows: 0.1fr 0.2fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
     grid-template-areas: 
     "sidebar navbar"
@@ -132,4 +132,4 @@
     gap: 0.2rem;
   } 
   
-} */
+}
