--- a/src/components/sidebar.css
+++ b/src/components/sidebar.css
@@ -5,6 +5,7 @@
     display: flex;
     flex-direction: column;
     justify-content: space-around;
+    z-index: 20;
 }
 
 .logo {
